--- a/project_ML_finalversion_v2.ipynb
+++ b/project_ML_finalversion_v2.ipynb
@@ -8,7 +8,8 @@
     "# Multi-messenger astronomy in the context of the VO framework.\n",
     "\n",
     "### Partecipant project for the [second ESCAPE Virtual Observatory School](https://indico.in2p3.fr/event/25225/): a practical example using  the Multi Order Coverage maps in Python.\n",
-    "##### Maria Lisa Brozzetti; marialisa.brozzetti@studenti.unipg.it"
+    "##### Maria Lisa Brozzetti; marialisa.brozzetti@studenti.unipg.it\n",
+    "##### Updated by Gianmarco Aristei and Andrea Svizzeretto (gianmarco.aristei@studenti.unipg.it; andrea.svizzeretto@studenti.unipg.it)"
    ]
   },
   {
