--- a/project_ML_finalversion_v2.ipynb
+++ b/project_ML_finalversion_v2.ipynb
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip3 healpy"
+    "!pip3 install healpy"
    ]
   },
   {
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda -c install conda-forge ligo.skymap"
+    "!conda install -c conda-forge ligo.skymap"
    ]
   },
   {
