--- a/project_ML_finalversion_v2.ipynb
+++ b/project_ML_finalversion_v2.ipynb
@@ -53,7 +53,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!conda install -c conda-forge ligo.skymap"
+    "#!conda install -c conda-forge ligo.skymap"
    ]
   },
   {
