--- a/project_ML_finalversion_v2.ipynb
+++ b/project_ML_finalversion_v2.ipynb
@@ -53,6 +53,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip3 install ipyaladin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#!conda install -c conda-forge ligo.skymap"
    ]
   },
